--- a/css/contact.css
+++ b/css/contact.css
@@ -1,5 +1,5 @@
 body {
-    background: black;
+    background: url('https://images.unsplash.com/photo-1563628657662-9be6896b80bb?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1951&q=80');
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -8,31 +8,39 @@ body {
     margin:0;
   }
 
-.mapouter{
+.map{
     margin-top:15px;
     margin-left: auto;
     margin-right: auto;
+    height: 500px;
+    width: 600px;
+}
+.gmap_canvas {
+  overflow: hidden;
+  background: none !important;
+  height: 500px;
+  width: 600px;
 }
 
 .map-info{
     text-align: center;
 }
 
- /* Style inputs with type="text", select elements and textareas */
- input[type=text], select, textarea {
-    width: 100%; /* Full width */
-    padding: 12px; /* Some padding */ 
-    border: 1px solid #ccc; /* Gray border */
-    border-radius: 4px; /* Rounded borders */
-    box-sizing: border-box; /* Make sure that padding and width stays in place */
-    margin-top: 6px; /* Add a top margin */
-    margin-bottom: 16px; /* Bottom margin */
-    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+ /* Here we style the input fields of the form */
+ input[type=text], textarea {
+    width: 100%; 
+    padding: 12px; 
+    border: 1px solid #ccc; 
+    border-radius: 4px; 
+    box-sizing: border-box; 
+    margin-top: 6px; 
+    margin-bottom: 16px; 
+    resize: vertical 
   }
   
   /* Style the submit button with a specific background color etc */
   input[type=submit] {
-    background-color: #4CAF50;
+    background-color: #414141;
     color: white;
     padding: 12px 20px;
     border: none;
@@ -42,13 +50,13 @@ body {
   
   /* When moving the mouse over the submit button, add a darker green color */
   input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #a0a0a0;
   }
   
   /* Add a background color and some padding around the form */
   .container {
       margin-top: 100px;
     border-radius: 5px;
-    background-color: #f2f2f2;
+    background: rgba(255, 255, 255, 0.87);
     padding: 20px;
   } 
