--- a/css/singin.css
+++ b/css/singin.css
@@ -49,21 +49,20 @@ span.psw {
   z-index: 1; /* Sit on top */
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
+  width: 100%; 
+  height: 100%; 
   overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
   padding-top: 60px;
 }
 
 /* Modal Content/Box */
 .modal-content {
   background-color: #ffffffb7;
-  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
-  border: 1px solid #888;
+  margin: 5% auto 15% auto; 
   padding: 35px;
-  width: 40%; /* Could be more or less, depending on screen size */
+  width: 40%;
 }
 
 /* The Close Button (x) */
