--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,6 @@ span{
     padding:0;
 }
 
-.container{
-    float:right;
-}
 
 .nav-link{
     font-size: 1rem;
@@ -58,15 +55,7 @@ span{
 	 box-sizing: border-box;
 }
 
- .page-content {
-	 display: grid;
-	 grid-gap: 1rem;
-	 padding: 1rem;
-	 max-width: 1024px;
-	 margin-top: 200px;
-     margin-left: 100px;
-	 font-family: var(--font-sans);
-}
+
  @media (min-width: 600px) {
 	 .page-content {
 		 grid-template-columns: repeat(2, 1fr);
@@ -77,12 +66,32 @@ span{
 		 grid-template-columns: repeat(4, 1fr);
 	}
 }
+
+.wrapper{
+  width:50%;
+  padding-top: 20px;
+    margin-top:200px;
+  float:right;
+}
+h2{
+  font-family:sans-serif;
+  color:#fff;
+}
+.carousel{
+  width:90%;
+  margin:0px auto;
+}
+
+.slick-slide{
+  margin:10px;
+
+}
+
  .card {
 	 position: relative;
 	 display: flex;
 	 align-items: flex-end;
-	 overflow: hidden;
-	 padding: 1rem;
+	 overflow: hidden;	 padding: 1rem;
 	 width: 100%;
 	 text-align: center;
 	 color: black;
@@ -135,16 +144,24 @@ span{
 	 transform: translateY(-50%);
 	 transition: transform calc(var(--d) * 2) var(--e);
 }
- .card:nth-child(1):before {
+ .card1:before {
 	 background-image: url(https://images.unsplash.com/photo-1515169251401-69e938cbc25f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2151&q=80);
 }
- .card:nth-child(2):before {
+ .card2:before {
 	 background-image: url(https://images.unsplash.com/photo-1533903345306-15d1c30952de?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
 }
- .card:nth-child(3):before {
+ .card3:before {
 	 background-image: url(https://images.unsplash.com/photo-1545243424-0ce743321e11?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
 }
- .card:nth-child(4):before {
+ .card4:before {
+	 background-image: url(https://images.unsplash.com/photo-1531306728370-e2ebd9d7bb99?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
+
+}
+ .card5:before {
+	 background-image: url(https://images.unsplash.com/photo-1515169251401-69e938cbc25f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2151&q=80);
+
+}
+ .card6:before {
 	 background-image: url(https://images.unsplash.com/photo-1531306728370-e2ebd9d7bb99?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
 
 }
@@ -225,4 +242,3 @@ span{
 	}
      
 }
- 
