--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background: url('https://images.unsplash.com/photo-1590117051772-76cb36cf9007?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1773&q=80') no-repeat center center fixed;
+    background-color: aqua;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -56,16 +56,6 @@ span{
 }
 
 
- @media (min-width: 600px) {
-	 .page-content {
-		 grid-template-columns: repeat(2, 1fr);
-	}
-}
- @media (min-width: 1000px) {
-	 .page-content {
-		 grid-template-columns: repeat(4, 1fr);
-	}
-}
 
 .wrapper{
   width:50%;
@@ -90,6 +80,8 @@ h2{
  .card {
 	 position: relative;
 	 display: flex;
+     max-height: 350px;
+     min-height: 350px;
 	 align-items: flex-end;
 	 overflow: hidden;	 padding: 1rem;
 	 width: 100%;
@@ -97,25 +89,6 @@ h2{
 	 color: black;
 	 background-color: Black;
 	 box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.1);
-}
- @media (min-width: 600px) {
-	 .card {
-		 height: 350px;
-	}
-}
-
-.card:nth-child(4){
-    height: 300px;
-    width: 200px;
-    margin-top: 25px;
-    opacity: 0.5;
-}
-.card:nth-child(4):after{
-  z-index  : 1;
-  pointer-events   : none;
-  background-image : linear-gradient(to right, 
-                    rgba(255,255,255, 0), 
-                    rgba(0,0,0, 1) 60%);
 }
 
 
@@ -165,6 +138,15 @@ h2{
 	 background-image: url(https://images.unsplash.com/photo-1531306728370-e2ebd9d7bb99?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
 
 }
+
+.cardTitle{
+   	 position: relative;
+	 display: flex;
+	 flex-direction: column;
+	 align-items: center;
+	 width: 100%;
+	 padding: 1rem;
+}
  .content {
 	 position: relative;
 	 display: flex;
@@ -207,7 +189,7 @@ h2{
  .btn:focus {
 	 outline-offset: 3px;
 }
- @media (hover: hover) and (min-width: 600px) {
+ @media (hover: hover) and (min-width: 992px) {
 
 	 .card:after {
 		 transform: translateY(0);
@@ -242,3 +224,80 @@ h2{
 	}
      
 }
+
+
+
+
+@media (max-width: 992px){
+    body{
+        background-color: Yellow;
+    }
+    
+    .card {
+        margin-top: 20px;
+        max-height: 150px;
+        min-height: 150px;
+        min-width: 300px;
+     
+	}
+    .main-information{
+         position: absolute;
+         margin-top: 20px;
+         margin-left: 24px;
+    }
+    .main-information h1{
+        
+        font-size: 3rem;
+    }
+    .main-information span{
+       font-size: 80%;
+        text-align: center;
+    }
+    .wrapper{
+    width:100%;
+    padding-top: 20px;
+    margin-top:200px;
+    float:none;
+    }
+
+    
+}
+
+
+
+@media (max-width: 600px){
+     body{
+        background-color: black;
+    }
+
+    .card {
+        margin-top: 20px;
+        max-height: 150px;
+        min-height: 150px;
+        min-width: 300px;
+     
+	}
+    .main-information{
+         position: absolute;
+         margin-top: 20px;
+         margin-left: 24px;
+    }
+    .main-information h1{
+        
+        font-size: 3rem;
+    }
+    .main-information span{
+       font-size: 80%;
+        text-align: center;
+    }
+    .wrapper{
+    width:100%;
+    padding-top: 20px;
+    margin-top:200px;
+    float:none;
+    }
+  
+}
+
+
+
