--- a/css/news.css
+++ b/css/news.css
@@ -1,109 +1,164 @@
 body {
+    background-color: black;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Cardo', serif;
     margin:0;
   }
 
-  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
-:root{
-    --overlay-color: #58b14f28;
-}
+  h1, h2, h3, h4, h5, h6 {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+   }
+
+  p {font-size: 16px;}
+  .margin {margin-bottom: 45px;}
 
 
-.showcase{
-    position:absolute;
-    right: 0;
-    width: 100%;
-    min-height: 100vh;
-    padding: 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: #111;
-    color: #fff;
-    z-index: 2;
-    transition: 0.5s;
-}
-
-.showcase video{
-    position: absolute;
-    top:0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    opacity: 0.8;
-}
-
-.text{
+  .bg-1 { 
+    width: 100%; 
+    height: 360px; 
     position: relative;
-    z-index: 10;
-}
+  }
 
-.text h2{
-    font-size: 5em;
-    font-weight: 800;
-    line-height: 1em;
-    text-transform: uppercase;
-}
-.text h3{
-    font-size: 4em;
-    font-weight: 700;
-    line-height: 1em;
-    text-transform: uppercase;
-}
+  .waterfall-video{
+       margin: auto; display: block;
+    }
 
-.text p{
-    font-size: 1.1em;
-    margin: 20px 0;
-    font-weight: 400;
-    max-width: 700px;
-}
-
-.overlay{
-    position: absolute;
-    top:0;
-    left: 0;
+#News{
+    position: absolute; top: 0; left: 0;
+    display: flex;
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center; 
     width: 100%;
     height: 100%;
-    background: var(--overlay-color);
-    mix-blend-mode: overlay;
+    color: white;
+    font-size: 100px;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    
+    }
+  #bali{
+    position: absolute;
+    top: 50px;
+    left: 15px;
+    background-color: black;
+    color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .Bali-info{
+      position: absolute;
+      bottom:0;
+      background: rgb(37, 37, 37);
+      margin-left: 10px;
+      margin-right: 10px;
+      border-radius: 10px;
+      margin-bottom: 10px;
+      padding: 20px;
+  }
+  .bali-img{
+    object-fit: cover;
+      position:relative;
+      top:0;
+      height:100%;
+      width:110%;
+  }
+  .bg-2 { 
+      position:relative;
+    background-color: #474e5d; /* Dark Blue */
+    color: #ffffff;
+    height: 700px;
+    padding-top: 0px;
+    padding-left: 0px;
+  }
+
+  .btn-secondary{
+      width: 100px;
+      font-family: 'Oswald';
+      letter-spacing: 1px;
+      font-size: large;
+      background-color: rgb(34, 185, 160);
+  }
+  .bg-3 { 
+    background-color: #ffffff; /* White */
+    color: #555555;
+    border-bottom: 3px solid black;
+  }
+
+  #contactBtn{
+    position:relative;
+    top:50%; 
+    left:38%;
+    margin-top:20px;
+      background-color: black;
+      justify-content: center;
+  }
+  .bg-4 { 
+    background-color: #2f2f2f; /* Black Gray */
+    color: #fff;
+  }
+  .container-fluid {
+    padding-top: 70px;
+    padding-bottom: 70px;
+  }
+  
+  #HQ-Picture{
+    align-self: center;
+    width: 80%;
 }
 
-.text a{
-    display: inline-block;
-    font-size: 1em;
-    background: #fff;
-    padding: 10px 30px;
-    text-decoration: none;
-    color: #111;
-    margin-top: 10px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    transition: 0.2s;
-
-
-}
-
-.text a:hover{
-    letter-spacing: 6px;
-
+.box{
+    width: 100%;
+    height: 100%;            
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.65;  /* for demo purpose  */
 }
 
 
-@media(max-width: 798px){
-    .showcase, .showcase header{
-        padding: 40px;
+  @media(min-width: 650px){
+    .Bali-info{
+        position:absolute;
+        top: 65%;
+        background: rgb(37, 37, 37);
+        margin-left: 10%;
+        margin-right: 10%;
+        border-radius: 10px;
+        padding: 20px;
     }
 
-    .text h2{
-        font-size: 3em;
+    .bali-img{
+        object-fit: cover;
+        position:relative;
+        top:0;
+        width:110%;
+        height: 700px;
     }
 
-    .text h3{
-        font-size: 2em;
+    .bg-1 { 
+        background-image: url("https://images.unsplash.com/photo-1525624286412-4099c83c1bc8?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80");
+        height: 300px;
+        width: 100%;
+        color: #ffffff;
+        border-bottom: 3px solid black;
+      }
+
+      .bg-2 { 
+        position:relative;
+      background-color: #474e5d; /* Dark Blue */
+      color: #ffffff;
+      padding-top: 0px;
+      padding-left: 0px;
+      overflow: hidden;
     }
-}
+
+    #HQ-Picture{
+        align-self: center;
+        width: 80%;
+    }
+  }
