--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
-    background-color: aqua;
+    background: url(../images/BackgroundDesktop.jpg);
+    background-repeat: no-repeat; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -24,9 +25,10 @@ span{
 }
 
 .main-information{
- position: absolute;
- margin-top: 300px;
- margin-left: 240px;
+ position: absolute; 
+ margin-top: 17%;
+ margin-left: 10%;
+    
 }
 
 .main-information h1{
@@ -55,7 +57,14 @@ span{
 	 box-sizing: border-box;
 }
 
-
+.footer{
+    color: white;
+    width: 100%;
+    font-size: 10px;
+    margin-top: 20px;
+    position: absolute;
+    bottom:0;
+}
 
 .wrapper{
   width:50%;
@@ -118,24 +127,20 @@ h2{
 	 transition: transform calc(var(--d) * 2) var(--e);
 }
  .card1:before {
-	 background-image: url(https://images.unsplash.com/photo-1515169251401-69e938cbc25f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2151&q=80);
+	 background-image: url(https://images.unsplash.com/photo-1612437118912-ec24644cf846?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=564&q=80);
 }
  .card2:before {
-	 background-image: url(https://images.unsplash.com/photo-1533903345306-15d1c30952de?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
+	 background-image: url(https://images.unsplash.com/photo-1591649389515-2e1640c7ac8d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80);
 }
  .card3:before {
-	 background-image: url(https://images.unsplash.com/photo-1545243424-0ce743321e11?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
+	 background-image: url(https://images.unsplash.com/photo-1573790387438-4da905039392?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=666&q=80);
 }
  .card4:before {
-	 background-image: url(https://images.unsplash.com/photo-1531306728370-e2ebd9d7bb99?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
+	 background-image: url(https://images.unsplash.com/photo-1503899036084-c55cdd92da26?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80);
 
 }
  .card5:before {
-	 background-image: url(https://images.unsplash.com/photo-1515169251401-69e938cbc25f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2151&q=80);
-
-}
- .card6:before {
-	 background-image: url(https://images.unsplash.com/photo-1531306728370-e2ebd9d7bb99?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
+	 background-image: url(https://images.unsplash.com/photo-1529655683826-aba9b3e77383?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=701&q=80);
 
 }
 
@@ -222,22 +227,29 @@ h2{
 	 .card:focus-within:before, .card:focus-within:after, .card:focus-within .content, .card:focus-within .content > *:not(.title) {
 		 transition-duration: 0s;
 	}
+     .footer{
+    color: white;
+    text-align: center;
+    font-size: 10px;
+    margin-top: 20px;
+}
      
 }
-
 
 
 
 @media (max-width: 992px){
     body{
-        background-color: Yellow;
+        background: url(../images/BackgroundIpad.jpg);
+
     }
     
     .card {
         margin-top: 20px;
-        max-height: 150px;
-        min-height: 150px;
-        min-width: 300px;
+        max-height: 200px;
+        min-height: 200px;
+        min-width: 350px;
+        max-width: 350px;
      
 	}
     .main-information{
@@ -256,18 +268,62 @@ h2{
     .wrapper{
     width:100%;
     padding-top: 20px;
-    margin-top:200px;
+    margin-top:180px;
     float:none;
+    }    
+     .card:after{
+        width: 0%;
+        height: 0%;
+    }
+    .carousel{
+        display: grid;
+        grid-template-columns: auto auto;
+        grid-gap: 10px;
+
+    }
+    .card1:before {
+        background-position: center;
+}
+ .card2:before {
+        background-position: center;
+}
+ .card3:before {
+        background-position: center;
+}
+ .card4:before {
+        background-position: center;
+
+}
+ .card5:before {
+        background-position: center;
+
+}
+    .top-div{
+        background-image: url(https://images.unsplash.com/photo-1447752875215-b2761acb3c5d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)
     }
 
+    .main-information{
+         position: absolute;
+         margin-top: 20px;
+         margin-left: 40px;
+        
+    }
     
+    .footer{
+    color: white;
+    text-align: center;
+    font-size: 10px;
+    margin-top: 20px;
+    position:inherit;
 }
-
+}
 
 
 @media (max-width: 600px){
      body{
-        background-color: black;
+         background-image: url(../images/BackgroundMobile.jpg);
+        background-repeat: no-repeat;
+
     }
 
     .card {
@@ -275,6 +331,7 @@ h2{
         max-height: 150px;
         min-height: 150px;
         min-width: 300px;
+        max-width: 400px;
      
 	}
     .main-information{
@@ -296,8 +353,47 @@ h2{
     margin-top:200px;
     float:none;
     }
-  
+    
+.card1:before {
+        background-position: center;
 }
+ .card2:before {
+        background-position: center;
+}
+ .card3:before {
+        background-position: center;
+}
+ .card4:before {
+        background-position: center;
 
+}
+ .card5:before {
+        background-position: center;
 
+}
+    
+    .card:after{
+        width: 0%;
+        height: 0%;
+    }
+  
 
+.carousel{
+        display: inherit;
+        grid-template-columns: auto auto;
+        grid-gap: 10px;
+
+    }
+    
+    .wrapper{
+        margin-top: 150px;
+    }
+    
+.footer{
+    color: white;
+    text-align: center;
+    font-size: 10px;
+    margin-top: 20px;
+    position:inherit;
+}
+    }
