--- a/css/nav.css
+++ b/css/nav.css
@@ -1,15 +1,24 @@
-body {
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-    font-family: 'Montserrat', sans-serif;
-    margin:0;
-  }
+body{
+  font-family: 'Cardo', serif;
+}
 
-  p{
-    color: white;
-    position: fixed;
-    top: 0;
-    float:right;
+.nav-link{
+  margin:0;
+}
+
+a{
+  color: white;
+}
+
+@media(min-width: 650px){
+  a{
+    font-size: 20px;
   }
+}
+
+
+@media(min-width: 900px){
+  a{
+    font-size: 25px;
+  }
+}
