--- a/css/destinations.css
+++ b/css/destinations.css
@@ -1,5 +1,5 @@
 body {
-  
+   background-color: black;
     font-family: 'Montserrat', sans-serif;
     margin:0;
   }
@@ -31,17 +31,25 @@ margin-right: 40px;
   color: goldenrod;
 }
 
+.top-banner{
+  background-image: url(../images/BackgroundNoLogo.jpg);
+  width: 100%;
+  height: 200px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
 .banner-logo img{
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  transform: scale(0.7);
+  margin-left: 19%;
+  margin-bottom: 20%;
+  top:0; 
+  transform: scale(0.87);
 }
 
 .center {
   position: absolute;
-  top: 82%;
+  top: 85%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   background-color: transparent;
@@ -51,13 +59,11 @@ margin-right: 40px;
 .card {
   width: 550px;
   height: 250px;
-  background-color: #fff;
-  background: linear-gradient(#f8f8f8, #fff);
-  box-shadow: 0 8px 16px -8px rgba(0,0,0,0.4);
-  border-radius: 6px;
-  overflow: hidden;
+  background: rgb(255,255,255);
+  background: linear-gradient(187deg, rgba(255,255,255,1) 0%, rgba(170,170,170,1) 100%); overflow: hidden;
   position: relative;
   margin-bottom: 30px;
+  border-radius: 10px;
   zoom: 0.68;
   -moz-transform:scale(0.68);
 }
@@ -202,7 +208,7 @@ margin-right: 40px;
 }
 
 .footer{
-  color: black;
+  color: w;
   width: 100%;
   font-size: 10px;
   position: absolute;
