--- a/css/destinations.css
+++ b/css/destinations.css
@@ -12,6 +12,7 @@ flex-direction: row;
 .filter-area p{
   margin-bottom: 0;
   font-size: 12px;
+  color: white;
 }
 .sort-filter{
   margin-bottom: 20px;
@@ -268,18 +269,40 @@ margin-right: 40px;
 .banner-logo{
  transform: scale(1.5);
  margin-bottom: 10%;
+ margin-top: 30%;
 }
 
 .filter-area{
+  margin-top: 40%;
   margin-bottom: 25%;
   transform: scale(1.7);
+}
+
+.top-banner{
+  height: 400px;
 }
 
 }
 
 @media (min-width: 1024px){
 
-  
+  body{
+    background-image: url(../images/BackgroundNoLogo.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .top-banner{
+    display: none;
+  }
+
+  .banner-logo{
+    margin-top: 80%;
+    margin-left: 49%; 
+  }
+  .banner-logo img{
+    margin:0;
+  }
 
   .card{
     transform: scale(1.5);
@@ -300,11 +323,12 @@ margin-right: 40px;
 
   .filter-area{
     margin-bottom: 5%;
-    margin-left: 40%;
-    transform: scale(1.2);
+    margin-left: 38%;
+    transform: scale(1.3);
+    margin-top: 0;
   }
 .center{
-  top: 75%;
+  top: 25%;
 }
 
 
