--- a/css/style.css
+++ b/css/style.css
@@ -26,11 +26,6 @@ span{
     transition: 0.5s;
 }
 
-.button{
-color: red;
-}
-
-
 
 .nav-link{
     font-size: 1rem;
@@ -75,15 +70,15 @@ color: red;
 }
 
 .top-banner{
-    background-image: url(../images/BackgroundNoLogo.jpg);
+    background-image: url(../images/BackgroundNoLogo2.jpg);
     width: 100%;
-    height: 200px;
+    height: 250px;
     background-repeat: no-repeat;
     background-size: cover;
 }
 .small-logo{
-    position: absolute;
-    top:0;
+    margin-top: -55%;
+    margin-bottom: 17%;
     margin-left: 22%;
     display: block;
     transform: scale(0.87);
@@ -92,12 +87,11 @@ color: red;
 .footer{
     color: white;
     font-size: 10px;
-    margin-top: 20px;
-    position: absolute;
-    margin-left: 25%;
-    bottom:0;
-}
+    margin-top: 10%;
 
+    margin-left: 25%;
+
+}
 
 
 .wrapper{
@@ -260,15 +254,21 @@ h2{
  }
 
 @media (min-width: 600px){
-    
+
     .top-banner{
-        height: 400px;
+        height: 650px;
+        width: 106.5%;
+        background-position: center;
+        background-size: contain;
+    
     }
+
     .main-information{
         margin-top: -2%;
+        margin-bottom: 20%;
     }
     .wrapper{
-        margin-top: 25%;
+        margin-top: 35%;
     }
     .social-media{
         margin-top: 15%;
@@ -279,8 +279,9 @@ h2{
     }
 
     .small-logo{
-        margin-top:5%;
-        margin-left: 35%;
+        margin-top:-63%;
+        margin-left: 43%;
+        margin-bottom: 20%;
         transform: scale(1.2);
     }
 
@@ -293,6 +294,8 @@ h2{
     body{
         background-image: url(../images/BackgroundNoLogo.jpg);
         background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
     }
 
     .fullscreen-news{
@@ -320,23 +323,24 @@ h2{
         height: 100px;
         width: 250px;
         margin-left: 14%;
-        top: 7%;
+        margin-top: 5%;
     }
     .main-information{
         top:35%;
     }
 
     .footer{
+        margin-top: 2%;
         margin-left: 45%;
 
     }
     .social-media{
-        margin-top: 2%;
+        margin-top: 3%;
         margin-left: 46%;
     }
 
     .wrapper{
-        margin-top: 30%;
+        margin-top: -5%;
     }
 
 
