--- a/css/destinations.css
+++ b/css/destinations.css
@@ -1,5 +1,5 @@
 body {
-   background-color: black;
+   background-image: linear-gradient(black, black);
     font-family: 'Montserrat', sans-serif;
     margin:0;
   }
@@ -33,26 +33,25 @@ margin-right: 40px;
 }
 
 .top-banner{
-  background-image: url(../images/BackgroundNoLogo.jpg);
-  width: 100%;
-  height: 200px;
+  background-image: url(../images/BackgroundNoLogo2.jpg);
+  height: 250px;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
 }
 
-.banner-logo img{
+.banner-logo{
   display: block;
-  margin-left: 19%;
-  margin-bottom: 20%;
+  margin-left: 22%;
+  margin-top: -55%;
   top:0; 
   transform: scale(0.87);
 }
 
 .center {
-  position: absolute;
-  top: 85%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
+  margin-top: 15%;
+  margin-left:4.5%;
+
   background-color: transparent;
 
 }
@@ -146,7 +145,9 @@ margin-right: 40px;
 }
 
 .card .additional .user-card .points {
-  top: 85%;
+  margin-top: 110%;
+ margin-left: 35%;
+  width: fit-content;
 }
 
 
@@ -209,12 +210,10 @@ margin-right: 40px;
 }
 
 .footer{
-  color: w;
-  width: 100%;
+  color: white;
+ margin-left: 20%;
   font-size: 10px;
-  position: absolute;
-  bottom:0;
-  text-align: center;
+
 }
 
 
@@ -249,39 +248,44 @@ margin-right: 40px;
 
 
 @media (min-width: 600px){
+.top-banner{
+  height: 650px;
+  width: 106.5%;
+  background-position: center;
+  background-size: contain;
+ } 
 
-.card{
-  transform: scale(1.8);
-  margin-bottom: 250px;
+ .banner-logo img{        
+  margin-top:-10%;
+  margin-left: 23%;
+  margin-bottom: 20%;
+  transform: scale(1.3);
+ }
+
+ .card{
+   transform: scale(1.8);
+   margin-bottom: 25%;
+   margin-left: 26%;
+   margin-top: 10%;
+ }
+
+ .filter-area{
+   margin-left: 20%;
+ }
+
+.sort-filter{
+  transform: scale(1.5);
 }
-.center{
-  top: 120%;
+
+.travel-category{
+  margin-left:10%;
+  transform: scale(1.5);
 }
 
 .footer{
   font-size: 15px;
+  margin-left: 30%;
 }
-
-.center{
-  top:100%;
-}
-
-.banner-logo{
- transform: scale(1.5);
- margin-bottom: 10%;
- margin-top: 30%;
-}
-
-.filter-area{
-  margin-top: 40%;
-  margin-bottom: 25%;
-  transform: scale(1.7);
-}
-
-.top-banner{
-  height: 400px;
-}
-
 }
 
 @media (min-width: 1024px){
@@ -289,7 +293,9 @@ margin-right: 40px;
   body{
     background-image: url(../images/BackgroundNoLogo.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-position: top;
+
+
   }
 
   .top-banner{
@@ -297,39 +303,42 @@ margin-right: 40px;
   }
 
   .banner-logo{
-    margin-top: 80%;
-    margin-left: 49%; 
+    margin-top: 7%;
+    margin-left: 26%;
   }
-  .banner-logo img{
-    margin:0;
+  .banner-logo img{        
+    margin-left: 23%;
+    margin-bottom: 0;
   }
+  
+   .card{
+     transform: scale(1.2);
+     margin-bottom: 0;
 
-  .card{
-    transform: scale(1.5);
-    margin-left: 300px;
-    margin-bottom: 150px;
-
-  }
-  .card-wrap{
-    margin-left: -10%;
+   }
+  
+   .card-wrap{
+     margin-top: 0;
+    margin-left: 15%;
     margin-bottom: 10%;
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 550px 550px;
     
   }
+
+   .filter-area{
+     margin-left: 27%;
+     margin-top: -15%;
+    transform: scale(0.7);
+   }
+
+
+  
   .footer{
-    margin-left: 9%; 
+    font-size: 15px;
+    margin-left: 40%;
   }
 
-  .filter-area{
-    margin-bottom: 5%;
-    margin-left: 38%;
-    transform: scale(1.3);
-    margin-top: 0;
-  }
-.center{
-  top: 25%;
-}
 
 
 
