--- a/css/tokyo.css
+++ b/css/tokyo.css
@@ -1,9 +1,98 @@
 body {
-    background: url('https://images.unsplash.com/photo-1590117051772-76cb36cf9007?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1773&q=80') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-    font-family: 'Montserrat', sans-serif;
-    margin:0;
-  }
+  background-image: linear-gradient(black, black);
+  font-family: 'Cardo', serif;
+  margin:0;
+}
+
+
+.top-banner{
+  background-image: url(../images/TokyoBackground.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 100%;
+  height: 250px;  
+}
+
+.small-logo{
+  margin-top: -60%;
+  margin-left: 17%;
+}
+.small-logo img{
+transform: scale(0.7);
+}
+
+.stats{
+  margin-left: 15%;
+  margin-top: 25%;
+  display: flex;
+  orientation: row;
+  color:goldenrod;
+}
+
+
+.wrap-icon{
+  margin-right:20px;
+}
+
+.wrap-awards i{
+  margin-left: 17px;
+}
+.wrap-awards .value{
+margin-left: 16px;
+}
+
+.wrap-shopping i{
+  margin-left: 27px;
+}
+
+.wrap-shopping .value{
+  margin-left: 19px;
+}
+
+.wrap-scenery i{
+  margin-left: 17px;
+}
+
+.wrap-scenery .value{
+  margin-left: 4px;
+}
+
+.wrap-weather i{
+  margin-left: 17px;
+}
+
+.wrap-weather .value{
+  margin-left: 7px;
+}
+
+.info-text{
+  margin-left:5%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  padding: 5px;
+  border-radius: 10px;
+  width: 90%;
+  border: 2px solid goldenrod;
+}
+.city-text{
+color:goldenrod;
+}
+
+.image-slide{
+  margin-top: 7%;
+  margin-left: 10%;
+  width: 80%;
+}
+
+.image-slide img{
+  height: 220px;
+}
+
+.footer{
+  color:white;
+  font-size: 12px;
+  margin-top: 5%;
+  margin-left:20%
+}
+
