--- a/css/bali.css
+++ b/css/bali.css
@@ -6,7 +6,7 @@ body {
   
   
   .top-banner{
-    background-image: url(../images/BergenBackground.jpg);
+    background-image: url(../images/BaliBackground.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
@@ -141,7 +141,7 @@ body {
   
   @media (min-width: 1024px){
     body{
-      background-image: url(../images/BergenBackground.jpg);
+      background-image: url(../images/BaliBackground.jpg);
       background-repeat: no-repeat;
       background-position:top;
       background-size: cover;
