--- a/css/tokyo.css
+++ b/css/tokyo.css
@@ -11,7 +11,7 @@ body {
   background-repeat: no-repeat;
   background-size: contain;
   width: 100%;
-  height: 250px;  
+  height: 260px;  
 }
 
 .small-logo{
@@ -96,3 +96,121 @@ color:goldenrod;
   margin-left:20%
 }
 
+.book-button{
+  margin-left: 36%;
+}
+
+@media (min-width: 600px){
+.top-banner{
+  margin-top: -10%;
+  height: 650px;
+}
+
+.small-logo{
+  margin-top: -65%;
+  margin-left: 35%;
+}
+.small-logo img{
+transform: scale(1);
+}
+
+.stats{
+  margin-top: 20%;
+  margin-left: 33%;
+}
+
+.footer{
+  font-size: 15px;
+  margin-left: 30%;
+}
+
+.image-slide img{
+  height: 390px;
+}
+.image-slide{
+  margin-top: 2%;
+  margin-left: 10%;
+  width: 80%;
+}
+
+.book-button{
+  margin-left: 42%;
+}
+
+}
+
+@media (min-width: 1024px){
+  body{
+    background-image: url(../images/TokyoBackground.jpg);
+    background-repeat: no-repeat;
+    background-position:top;
+    background-size: cover;
+    background-position-y: 20%;    
+  }
+
+  .top-banner{display: none;
+  }
+  
+  .small-logo{
+    margin-top: 2%;
+    margin-left: 43.5%;
+  }
+  .small-logo img{
+  transform: scale(1.2);
+  }
+  
+  .stats{
+    background-color: rgb(0,0,0, 0.7); 
+    width: fit-content;
+    padding: 10px;
+    border-radius: 10px;
+    padding-left: 30px;
+    margin-top: 22%;
+    margin-left: 57%;
+    border: 2px solid goldenrod;
+  }
+  
+  .footer{
+    font-size: 15px;
+    margin-left: 30%;
+  }
+  
+  .image-slide img{
+    height: 500px;
+
+  }
+  .image-slide{
+    margin-top: -10%;
+    margin-left: 10%;
+    width: 30%;
+  }
+  
+.info-text{
+  background-color:rgb(0,0,0, 0.8);
+  width: 30%;
+}
+.text1{
+  margin-left: 51%;
+  margin-top:-25%;
+  margin-bottom: 5%;
+}
+.text2{
+margin-top: -17%;
+  margin-left: 51%;
+}
+
+.footer{
+  margin-top: 5%;
+  margin-left: 43%;
+}
+
+.book-button{
+  margin-top: 10%;
+  margin-left: 21%;
+}
+
+.book-button a{
+  transform: scale(1.5);
+}
+
+}
